--- a/style.css
+++ b/style.css
@@ -1,54 +1,118 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 header{
-  display: flex;
-  width: 100%;
+display: flex;
+width: 100%;
 }
 .lgo-cacheado{
-  padding: 1rem;
+width: 127px;
+padding: 1rem;
 }
 
+
 .list-header{
-  display: flex;
-  justify-content: space-around;
-  width: 55%;
-  padding: 2rem;
+display: flex;
+justify-content: space-around;
+width: 54%;
+padding: 2rem;
+}
+
+.link-header{
+width: 100%;
+color: #9767A9;
+text-decoration: none;
 }
 
 ul{
-  display: flex;
-  justify-content: space-around;
-  width: 93%;
-  list-style: none;
+display: flex;
+justify-content: space-around;
+width: 93%;
+list-style: none;
 }
 
 #divBusca{
-  border-radius:29px;
-  width:205px;
-  height: 29px;
-  border: 3px solid #9767A9;
-  /* border:solid 1px; */
+border-radius:29px;
+width:205px;
+height: 29px;
+border: 3px solid #9767A9;
+/* border:solid 1px; */
 }
 
 #txtBusca{
-  
-  padding-left:5px;
-  font-style:italic;
-  font-size:10px;
-  border:none;
-  height:23px;
-  width:135px;
+
+padding-left:5px;
+font-style:italic;
+font-size:10px;
+border:none;
+height:23px;
+width:135px;
 }
 
 .lupa{
-  height: 17px;
-  float: left;
+height: 17px;
+float: left;
 }
 
-.redes-sociais{
-  
+.redes-socias{
+width: 14%;
+display: flex;
+justify-content: space-evenly;
+align-items: center;
+}
+
+.logo-redes{
+width: 33px;
+}
+
+
+
+.cabeludo{
+background-image: url(img/cabeludo.png);
+width: 100%;
+height: 64vh;
+/* background-size: contain; */
+display: flex;
+background-repeat: no-repeat;
+background-size: cover;
+background-repeat: no-repeat;
+}
+
+.title{
+display: flex;
+justify-content: center;
+flex-direction: column;
+align-items: flex-end;
+width: 40%;
+}
+
+h1{
+width: 62%;
+display: flex;
+height: 39%;
+justify-content: flex-end;
+align-items: flex-end;
+color: aliceblue;
+font-size: 3rem;
+}
+
+.sub-title{
+display: flex;
+width: 46%;
+justify-content: flex-end;
+align-items: center;
+}
+
+h2{
+display: flex;
+width: 67%;
+height: 30%;
+align-items: center;
+font-size: 2rem;
+color: aliceblue;
+justify-content: flex-end;
+flex-direction: column;
 }
