--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
   margin: 0;
   padding: 0;
@@ -42,14 +43,18 @@ border: 3px solid #9767A9;
 /* border:solid 1px; */
 }
 
-#txtBusca{
+#txtBusca::-webkit-input-placeholder{
+color: #9767A9;
+}
 
+#txtBusca{
 padding-left:5px;
 font-style:italic;
 font-size:10px;
 border:none;
 height:23px;
 width:135px;
+outline: none;
 }
 
 .lupa{
@@ -66,6 +71,11 @@ align-items: center;
 
 .logo-redes{
 width: 33px;
+}
+
+.barra-buscar{
+  display: flex;
+  align-items: center;
 }
 
 
@@ -106,7 +116,7 @@ justify-content: flex-end;
 align-items: center;
 }
 
-h2{
+.subtitle-cabeludo{
 display: flex;
 width: 67%;
 height: 30%;
@@ -116,3 +126,14 @@ color: aliceblue;
 justify-content: flex-end;
 flex-direction: column;
 }
+
+.fundo-roxo{
+  background: #9767A9;
+}
+
+
+
+
+
+
+
