--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ list-style: none;
 
 #divBusca{
 border-radius:29px;
-width:205px;
+width:138px;
 height: 29px;
 border: 3px solid #9767A9;
 /* border:solid 1px; */
@@ -53,13 +53,15 @@ font-style:italic;
 font-size:10px;
 border:none;
 height:23px;
-width:135px;
+width:101px;
 outline: none;
 }
 
 .lupa{
 height: 17px;
 float: left;
+padding-top: 4px;
+padding-left: 4px;
 }
 
 .redes-socias{
@@ -127,13 +129,69 @@ justify-content: flex-end;
 flex-direction: column;
 }
 
-.fundo-roxo{
-  background: #9767A9;
+main{
+  width: 100%;
 }
 
+.fundo-roxo{
+  display: flex;
+  background: #9767A9;
+  height: 35vh;
+}
 
+.text-main{
+  display: flex;
+  width: 44%;
+  font-size: 20px;
+  justify-content: center;
+  color: #FFFFFF;
+  padding: 1rem;
+}
 
+.title-main{
+  width: 84%;
+}
 
+.paragraph-main{
+  display: flex;
+  padding-top: 2rem;
+  color: #FFFFFF;
+  width: 45%;
+  justify-content: flex-end;
+}
 
+.paragraph-motivacional{
+  font-size: 18px;
+  width: 73%;
+}
 
+.espelho{
+  position: relative;
+  bottom: 127px;
+}
 
+.no-espelho{
+  width: 400px;
+  padding: 1rem;
+}
+
+.text-espelho{
+  background: #9767A9;
+  width: 26%;
+  position: relative;
+  left: 46px;
+  bottom: 64px;
+  padding: 1rem;
+  color: #FFFFFF;
+}
+
+.title-espelho{
+  width: 92%;
+
+}
+
+.paragraph-espelho{
+  width: 90%;
+  padding-top: 1rem;
+  font-size: 14px;
+}
