--- a/style.css
+++ b/style.css
@@ -482,5 +482,52 @@ main{
   font-family: 'Playfair Display', serif;
 }
 
+.final-main{
+  display: flex;
+  width: 100%;
+}
+
+.imgs-final{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+img{
+  width: 90%;
+  padding-bottom: 1rem;
+}
 
 
+footer{
+  background: #9767A9;
+  display: flex;
+}
+
+
+.text-footer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 1rem;
+  width: 54%;
+  color: #FFFFFF;
+}
+
+.menu-footer{
+  display: flex;
+  justify-content: center;
+  width: 46%;
+}
+
+a{
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.imgs-footer{
+  width: 31%;
+}
